[package]
name = "rrm"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base16ct = { version = "1.0.0", features = ["alloc"] }
camino = "1.2.2"
clap = { version = "4.5.59", features = ["derive"] }
digest = "0.11.0"
log = { version = "0.4.29", features = ["std"] }
roxmltree = "0.21.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha1 = "0.10.6"
shlex = "1.3.0"
simple_logger = { version = "5.1.0", features = ["colors", "stderr"] }
wild = "2.2.1"
zip = "8.1.0"
